style.css
html {
    scroll-behavior: smooth;
}

html,
body {
    padding-top: 0px !important;
    width: 100%;
    height: 100%;
}

#main div h1 {
    margin-top: 10px !important;
}

#main {
    width: 100%;
    height: 80%;
}

/*****************************************************************************/
/* Navbar                                                                    */
/*****************************************************************************/
.navbar {
    height: 25px;
    width: 100%;
    border-style: solid;
    border-width: 1px;
    border-color: #ccc;
    margin-top: 5px;
}

.nav-link {
    color: #bc0000 !important;
    font-weight: bold !important;
    font-size: 80% !important;
}

/*****************************************************************************/
/* Logos                                                         */
/*****************************************************************************/

#logo {
    max-width: 50%;
    padding: 10px;
}

#explorer_logo {
    margin: auto;
    padding: 10px;
}


/*****************************************************************************/
/* Golden Layout                                                            */
/*****************************************************************************/

#gl_wrapper {
    height: 88%;
}

#core_settings {
    overflow: auto;
}

.gl_container {
    background: white;
    height: 100%;
}

.title-spacer {
    padding-top: 3% !important;
}

#memory_settings {
    overflow: auto;
}

#downloads {
    overflow: auto;
}

.row {
    margin-bottom: 20px;
    margin-left: 10px !important;
}

.row-item {
    float: left;
    margin-right: 5%;
}

.sec-title {
    margin-bottom: 20px;
}

.gl-input {
    width: 30%;
}
.row-icon {
    min-width: 90px;
}

.row-mid {
    padding-top: 4%;
}

/*****************************************************************************/
/* small gery text                                                           */
/*****************************************************************************/

.smallgraytext {
    font: 0.7em Tahoma, sans-serif;
    font-size: 11px;
    font-weight: bold;
    color: #999999;
}

.smallgraytext a {
    font: 0.7em Tahoma, sans-serif;
    font-size: 11px;
    font-weight: bold;
    color: #999999;
    text-decoration: none;
}

.smallgraytext a:hover {
    text-decoration: underline;
}

/*****************************************************************************/
/* Block Diagram                                                            */
/*****************************************************************************/

#diagram_div:focus {
    outline: None !important;
}

/*****************************************************************************/
/* image canvas                                                              */
/*****************************************************************************/

#image_canvas {
    display: none;
}

/*****************************************************************************/
/* messages                                                        */
/*****************************************************************************/

#messages {
    overflow: auto;
    height: 100%;
    font-family: monospace;
    background-color: cornsilk;
    white-space: nowrap;
}

/*****************************************************************************/
/* Footer Row                                                                */
/*****************************************************************************/

#footer_row_col {
    min-width: 540px;
}

